--- a/mediagraphie.html
+++ b/mediagraphie.html
@@ -291,6 +291,7 @@ Photographe non identifié. [Vers 1900]. La sortie de la messe à la basilique d
       <div class="row">
         <div class="col-sm-6">
           <p class="mb-1">&copy; Vous ne pouvez, en aucun cas, imprimer, reproduire, ou publier les vidéos et photos présentées sur ce site sans une permission écrite.</p>
+           <p class="mb-1">Pour une expérience optimale du site web, utilisez les navigateurs Chrome ou Firefox.</p>
           <div class="credits">
             Médias Interactifs (UQAM) - 2022
           </div>
