--- a/turcotte_rosalie.html
+++ b/turcotte_rosalie.html
@@ -109,7 +109,7 @@
                 <h3 style="margin-top: 4%;" class="h3">Le Timeliner</h3>
                 <p class="mb-4"><span class="text-muted">Culture</span></p>
                 <div class="mb-5">
-                  <p></p>
+                  <p>On voit différents maquillages qui évoluent au fil du temps, en partant des années 1900 jusqu'à aujourd'hui. Les photos dévoilent entre autres comment le maquillage est rendu beaucoup plus accessible pour tout type de personne, peu importe le genre ou la couleur de peau de la personne.</p>
 
                 </div>
               </div>
