--- a/ziehmann_eric.html
+++ b/ziehmann_eric.html
@@ -108,7 +108,7 @@
                 <h3 style="margin-top: 4%;" class="h3">Clash des technologies</h3>
                 <p class="mb-4"><span class="text-muted">Médias</span></p>
                 <div class="mb-5">
-                  <p></p>
+                  <p>Le clash des technologies, c'est comme une guerre. Ça force l'humain à constamment se réinventer et à repousser ses limites, à toujours créer de nouvelles inventions pour sa survie.</p>
 
                 </div>
               </div>
