--- a/about.html
+++ b/about.html
@@ -140,6 +140,7 @@ Directeur responsable du programme de Baccalauréat en communication (création 
       <div class="row">
         <div class="col-sm-6">
           <p class="mb-1">&copy; Vous ne pouvez, en aucun cas, imprimer, reproduire, ou publier les vidéos et photos présentées sur ce site sans une permission écrite.</p>
+           <p class="mb-1">Pour une expérience optimale du site web, utilisez les navigateurs Chrome ou Firefox.</p>
           <div class="credits">
             <p><img style="width: 16px;" src="assets/img/logo.png"><img> Médias Interactifs (UQAM) - 2022</p>
           </div>
