--- a/beuzen_alexandre.html
+++ b/beuzen_alexandre.html
@@ -76,22 +76,22 @@
                 <div class="sp-slides">
                   <!-- Slide 1 -->
                   <div class="sp-slide">
-                    <img onclick="FullSkreen()" class="sp-image" src="/artistes/beuzen_alexandre/archive.jpg"/>
+                    <img onclick="FullSkreen()" class="sp-image" src="/artistes/beuzen_alexandre/2.jpg"/>
                   </div>
                   
                   <!-- Slide 2 -->
                   <div class="sp-slide">
-                    <img onclick="FullSkreen()" class="sp-image" src="/artistes/beuzen_alexandre/1.jpg"/>
+                    <img onclick="FullSkreen()" class="sp-image" src="/artistes/beuzen_alexandre/3.jpg"/>
                   </div>
                   
                   <!-- Slide 3 -->
                   <div class="sp-slide">
-                    <img onclick="FullSkreen()" class="sp-image" src="/artistes/beuzen_alexandre/2.jpg"/>
+                    <img onclick="FullSkreen()" class="sp-image" src="/artistes/beuzen_alexandre/archive.jpg"/>
                   </div>
 
                   <!-- Slide 3 -->
                   <div class="sp-slide">
-                    <img onclick="FullSkreen()" class="sp-image" src="/artistes/beuzen_alexandre/3.jpg"/>
+                    <img onclick="FullSkreen()" class="sp-image" src="/artistes/beuzen_alexandre/1.jpg"/>
                   </div>
 
                 </div>
@@ -102,7 +102,7 @@
                 <h3 style="margin-top: 4%;" class="h3">Transition de l'été à l'automne</h3>
                 <p class="mb-4"><span class="text-muted">Espace</span></p>
                 <div class="mb-5">
-                  <p></p>
+                  <p>L'immortalisation d'un moment où la nature est entre la vie et la mort.</p>
 
                 </div>
               </div>
